<resources>
    <string name="app_name">DishCovery</string>
    <string name="home_logo_desc">Cooking App home page logo</string>
    <string name="app_desc">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using Content here, content here, making it look like readable English.  Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for lorem ipsum will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like)</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="reset_mail_message">Enter the email to send the reset link</string>
    <string name="reset">Reset</string>
    <string name="favorites">Favorites</string>
    <string name="sort">Sort</string>
    <string name="dietary">Dietary</string>
    <string name="type">Type</string>
    <string-array name="my_fav_sort_by">
        <item>Most Recent</item>
        <item>Most Popular</item>
        <item>By Price</item>
        <item>A-Z</item>
        <item>Z-A</item>
    </string-array>
    <!--    drop down items (array) for the sort menu in the history page-->
    <string-array name="my_spinner_items">
        <item>Most Recent</item>
        <item>Most Popular</item>
        <item>By Price</item>
        <item>A-Z</item>
        <item>Z-A</item>
    </string-array>

    <!--  Home page description  -->
    <string name="dev_team">
        Jaydenn (Ching-Ting) Chang N01511476
        Kaiyan Chen N01489178
        Simul Bista N01489966
        Mira Philip N01495720
        \nOur cooking app is dedicated to providing users with delicious and healthy recipes that are easy to follow. With a wide range of cuisines and dietary options, our app caters to all tastes and preferences. Our team of experienced chefs and nutritionists ensure that each recipe is not only tasty but also nutritious. With step-by-step instructions and helpful tips, our app makes cooking fun and accessible for everyone.
    </string>
    <string name="pg9_intro">Provide up to three ingredients and we will suggest some recipes for you.</string>
    <string name="pg15_direction_detail">STEP 1 Heat grill pan over medium-high heat. \nSTEP 2 Spread 1 teaspoon Butter with Canola Oil on one side of fillets. Sprinkle with 1/4 teaspoon garlic powder and 1/4 teaspoon pepper. Place into grill pan, butter-side down. Spread with 1 teaspoon Butter with Canola Oil; sprinkle remaining garlic powder and pepper over fish. Cook 5 minutes; turn. Place lemon into grill pan, cut-side down. Continue cooking fish 5-7 minutes or until internal temperature reaches 165°F and fish flakes easily with fork.\nSTEP 3 Dollop remaining Butter with Canola Oil onto fillets; let melt. Sprinkle with chives. Serve with grilled lemon.</string>
    <string name="pg16_privacy_info">We value your privacy and are committed to protecting your personal information. This Privacy Policy describes how we collect, use, and share information when you use our Android app.

Information We Collect:

Personal Information: We may collect personal information such as your name, email address, and other contact information when you create an account or contact us.
Usage Information: We may collect information about how you use our app, such as your search queries and the recipes you view and save.
How We Use Your Information:

We use your personal information to provide you with our services, to respond to your inquiries, and to communicate with you about our app and services.
We use your usage information to improve our app and services, to personalize your experience, and to provide you with relevant content.
How We Share Your Information:

We do not share your personal information with third parties, except as required by law or with your consent.
We may share your usage information with third-party analytics providers to help us analyze how our app is being used and to improve our services.
Data Security:
We take reasonable measures to protect your personal information from unauthorized access, use, and disclosure. However, please note that no transmission over the internet or electronic storage method is 100% secure.

Changes to Privacy Policy:
We may update this Privacy Policy from time to time. We will provide notice of any material changes by posting the new Privacy Policy on our website or within our app.</string>
    <string name="pg16_about_us">Introducing our team of Dishcovery app developers, a group of highly skilled and passionate individuals dedicated to creating the ultimate culinary experience for our users.

With years of experience in Android development and a deep love for food and cooking, our team brings a unique blend of technical expertise and creative flair to the table. We are committed to designing intuitive and user-friendly interfaces that allow our users to effortlessly discover new recipes, save their favorites, and share their own creations with the world.

Our team\'s innovative spirit and attention to detail are reflected in every aspect of Dishcovery, from the sleek and modern design to the robust and reliable backend infrastructure. We take pride in delivering a seamless and enjoyable cooking experience that helps our users improve their culinary skills and explore new flavors and cuisines.

Whether you are a beginner or a seasoned chef, Dishcovery has something for everyone. Join us on this exciting journey and discover the joy of cooking with our app.</string>
    <string name="pg16_meet_team">Developers:
Simul Bista, Jaydenn Chang, Kaiyan Chen, Mira Philip

Our team consists of four talented Android developers who are passionate about creating innovative and user-friendly apps.</string>
</resources>


